# RtsTenderSearchBot

./: .dockerignore  .gitignore  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  vercel.json
app/: main.py
app/bot/: bot.py  config.py  funcs.py
app/tests/: conftest.py  test_zakupki.py
app/zakupki/: router.py  schemas.py  zakupki_parser.py
