[tool.poetry]
name = "rts-tender-bot"
version = "0.1.0"
description = ""
authors = ["ScrollDude"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
apscheduler = "^3.10.4"
aiogram = "^3.7.0"
fastapi = "^0.111.0"
httpx = "^0.27.0"
pydantic-settings = "^2.2.1"
beautifulsoup4 = "^4.12.3"
fake-useragent = "^1.5.1"
lxml = "^5.2.2"
ruff = "^0.4.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
